--- a/index.html
+++ b/index.html
@@ -2,26 +2,6 @@
 <html lang="en">
 
 <head>
-    <!--CODEMIRROR-->
-    <link rel="stylesheet" href="codemirror/lib/codemirror.css">
-    <link rel="stylesheet" href="codemirror/addon/hint/show-hint.css">
-    <link rel="stylesheet" href="codemirror/addon/search/matchesonscrollbar.css">
-    <script src="codemirror/lib/codemirror.js"></script>
-    <script src="codemirror/addon/hint/show-hint.js"></script>
-    <script src="codemirror/addon/hint/javascript-hint.js"></script>
-    <script src="codemirror/addon/hint/html-hint.js"></script>
-    <script src="codemirror/addon/hint/css-hint.js"></script>
-    <script src="codemirror/addon/hint/xml-hint.js"></script>
-    <script src="codemirror/addon/hint/anyword-hint.js"></script>
-    <script src="codemirror/mode/javascript/javascript.js"></script>
-    <script src="codemirror/mode/htmlmixed/htmlmixed.js"></script>
-    <script src="codemirror/mode/css/css.js"></script>
-    <script src="codemirror/mode/xml/xml.js"></script>
-    <script src="codemirror/addon/search/search.js"></script>
-    <script src="codemirror/addon/search/searchcursor.js"></script>
-    <script src="codemirror/addon/search/matchesonscrollbar.js"></script>
-    <script src="codemirror/addon/scroll/annotatescrollbar.js"></script>
-    <!--LolScrypt-->
     <title>LolScrypt</title>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
@@ -61,7 +41,7 @@
         </div>
         <div class="lol-ui-left-nav" id="nav">
         </div>
-        <textarea id="code">function(){lol='www'}</textarea>
+        <div id="code">function(){lol='www'}</div>
     </div>
 </body>
 
